# appMonitorLora

./: CMakeLists.txt  sdkconfig.old
main/: CMakeLists.txt  board.h  gatewayUart.c  gatewayUart.h  main.c
main/src/leds/: leds.c  leds.h
main/src/lora_uart/: LoraUart.c  LoraUart.h  lora_uart_functions.c
